fix note text wrap

--- a/tumblr/less/app.less
+++ b/tumblr/less/app.less
@@ -884,7 +884,7 @@ body {
                     }
 
                     .action {
-                        display: inline-block;
+                        display: inline;
                         line-height: 1.1;
                     }
 
